14434
TestAnnotation.java:
```scala
public @interface TestAnnotation {
  public String parameter() default "";
}
```
TestClass.scala:
```scala
@TestAnnotation
class TestClass {
}
```
Compiling with r18493 yields:
```scala
$$ scalac TestAnnotation.java TestClass.scala
TestAnnotation.java:3: error: type AnnotationDefault is not a member of package <root>
  public String parameter() default "";
                ^
TestClass.scala:2: error: annotation TestAnnotation is missing argument parameter
@TestAnnotation
 ^
two errors found
```
